@@ -24,6 +24,13 @@ public List<String> readAllLines() throws IOException {
     }
 
     public void appendNewLine(String line) throws IOException {
-        Files.writeString(filePath,line+System.lineSeparator(), StandardCharsets.UTF_8, StandardOpenOption.APPEND);
+        Files.writeString(filePath,line+System.lineSeparator()
+                , StandardCharsets.UTF_8,
+                StandardOpenOption.APPEND);
+    }
+    public void appendAllLines(List<String> lines) throws IOException {
+        Files.write(filePath,lines
+                , StandardCharsets.UTF_8,
+                StandardOpenOption.TRUNCATE_EXISTING); //
     }
 }
